env: switch to oracle-17 jdk
Change source and target version to 17 in `pom.xml`.
Configured `Dockerfile` to use oracle-17 JDK.
Enabled CI builds for 17 JDK.