@@ -1,4 +1,4 @@
-FROM adoptopenjdk/openjdk14:alpine-jre
+FROM openjdk:17-oracle
 ARG JAR_FILE
 ENV JVM_OPTS=""
 
@@ -6,8 +6,8 @@ LABEL description="Artipie binary repository management tool"
 LABEL maintainer="g4s8.public@gmail.com"
 LABEL maintainer="oleg.mozzhechkov@gmail.com"
 
-RUN addgroup -S -g 2020 artipie && \
-    adduser -h /dev/null -D -S -g artipie -u 2021 -s /sbin/nologin artipie && \
+RUN groupadd -r -g 2020 artipie && \
+    adduser -M -r -g artipie -u 2021 -s /sbin/nologin artipie && \
     mkdir -p /etc/artipie /usr/lib/artipie /var/artipie && \
     chown artipie:artipie -R /etc/artipie /usr/lib/artipie /var/artipie
 USER 2021:2020
@@ -20,7 +20,8 @@ WORKDIR /var/artipie
 EXPOSE 8080
 CMD [ \
   "java", \
-  "--enable-preview", "-XX:+ShowCodeDetailsInExceptionMessages", \
+  "--add-opens", "java.base/java.util=ALL-UNNAMED", \
+  "--add-opens", "java.base/java.security=ALL-UNNAMED", \
   "-cp", "/usr/lib/artipie/artipie.jar:/usr/lib/artipie/lib/*", \
   "com.artipie.VertxMain", \
   "--config-file=/etc/artipie/artipie.yml", \
